@@ -26,8 +26,6 @@
 package org.olat.core.gui.components.form.flexible.impl;
 
 import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -45,7 +43,6 @@ import org.olat.core.gui.translator.PackageTranslator;
 import org.olat.core.gui.translator.Translator;
 import org.olat.core.util.StringHelper;
 import org.olat.core.util.Util;
-import org.olat.core.util.ValidationStatus;
 
 /**
  * Description:<br>
@@ -81,9 +78,8 @@ public class FormLayoutContainer extends FormItemImpl implements FormItemContain
 	 * The addXXX method adds elements -> 
 	 * The register method register an element only -> used for setErrorComponent / setLabelComponent.
 	 */
-	private Map<String,FormItem> formComponents;
-	private List<String> formComponentsNames;
-	private Map<String,FormItem> listeningOnlyFormComponents;
+	private final Map<String,FormItem> formComponents;
+	private final List<String> formComponentsNames;
 	private boolean hasRootForm=false;
 
 
@@ -128,7 +124,6 @@ public class FormLayoutContainer extends FormItemImpl implements FormItemContain
 		formComponentsNames = new ArrayList<>(5);
 		formLayoutContainer.contextPut("formitemnames", formComponentsNames);
 		formComponents = new HashMap<>();
-		listeningOnlyFormComponents = new HashMap<>();
 	}
 
 	@Override
@@ -137,8 +132,22 @@ public class FormLayoutContainer extends FormItemImpl implements FormItemContain
 	}
 
 	@Override
-	public void validate(List<ValidationStatus> validationResults) {
-		// form layouter is not validating
+	public boolean validate() {
+		boolean allOk = true;
+		
+		for(String formComponentName:formComponentsNames) {
+			FormItem item = formComponents.get(formComponentName);
+			if(item == null) {
+				continue;
+			}
+			if(item.isVisible() && item.isEnabled()) {
+				allOk &= item.validate();
+			} else if(item.hasError()) {
+				item.clearError();
+			}
+		}
+
+		return allOk;
 	}
 
 	@Override
@@ -193,59 +202,6 @@ public class FormLayoutContainer extends FormItemImpl implements FormItemContain
 		if (formComp instanceof FormMultipartItem) {
 			getRootForm().setMultipartEnabled(true);
 		}
-	}
-	
-	@Override
-	public void add(String name, Collection<FormItem> foItems){
-		
-		//remove if already in
-		if(formLayoutContainer.getContext().containsKey(name)){
-			//remove existing collection
-			formLayoutContainer.contextRemove(name);
-			//remove all associated form items
-			for (FormItem formItem : foItems) {
-				remove(formItem);
-			}
-		}
-		
-		//make collection accessible with <name> in the container.
-		//collection contains then only the names.
-		List<String> foItemsCollectionAsNames = new ArrayList<>();
-		formLayoutContainer.contextPut(name, foItemsCollectionAsNames);
-
-		//add all items as form items to the container
-		for (FormItem formItem : foItems) {
-			String foName = formItem.getName();
-			add(foName, formItem);
-			foItemsCollectionAsNames.add(foName);
-		}
-	}
-	
-	/**
-	 * register only, does not addsubcomponents, does not expose formItem in the velocity.
-	 * In 99% of the cases you should use an addXX method instead.
-	 * @param formComp
-	 */
-	public void register(FormItem formComp) {
-		if(!hasRootForm){
-			throw new AssertionError("first ensure that the layout container knows about its rootform!!");
-		}
-		// set the formtranslator, and parent
-		Translator itemTranslator = formComp.getTranslator();
-		if(formComp.getTranslator() != null && !formComp.getTranslator().equals(translator)
-				&& itemTranslator instanceof PackageTranslator) {
-			//let the FormItem provide a more specialized translator
-			PackageTranslator itemPt = (PackageTranslator)itemTranslator;
-			itemTranslator = PackageTranslator.cascadeTranslators(itemPt, translator);
-		}else{
-			itemTranslator = translator;
-		}
-		formComp.setTranslator(itemTranslator);
-		formComp.setRootForm(getRootForm());
-
-		String formCompName = formComp.getName();
-		// book keeping of FormComponent order
-		listeningOnlyFormComponents.put(formCompName, formComp);
 	}
 	
 	@Override
@@ -343,30 +299,22 @@ public class FormLayoutContainer extends FormItemImpl implements FormItemContain
 	
 	@Override
 	public Iterable<FormItem> getFormItems() {
-		List<FormItem> merged = new ArrayList<>(formComponents.values());
-		merged.addAll(listeningOnlyFormComponents.values());
-		return merged;
+		return new ArrayList<>(formComponents.values());
 	}
 
 	@Override
 	public Map<String, FormItem> getFormComponents() {
-		Map<String,FormItem> merged = new HashMap<>(formComponents);
-		merged.putAll(listeningOnlyFormComponents);
-		return Collections.unmodifiableMap(merged);
+		return Map.copyOf(formComponents);
 	}
 
 	@Override
 	public boolean hasFormComponent(FormItem item) {
-		return formComponents.containsValue(item)
-				||  listeningOnlyFormComponents.containsValue(item);
+		return formComponents.containsValue(item);
 	}
 
 	@Override
 	public FormItem getFormComponent(String name){
-		if(formComponents.containsKey(name)) {
-			return formComponents.get(name);
-		}
-		return listeningOnlyFormComponents.get(name);
+		return formComponents.get(name);
 	}
 	
 	public Context getContext() {
